Actual fix for mobile side bar issue.  Tested on Safari on Mac and iPhone 7

--- a/public/admin/css/paper-dashboard.user.css
+++ b/public/admin/css/paper-dashboard.user.css
@@ -6474,8 +6474,8 @@ a.filter-button {
 
 .navbar-toggle {
   position: absolute;
-  right: 25px;
-  top: 29px;
+  right: 15px;
+  top: 15px;
   color: black;
 }
 button.btn.btn-link {
